# mnist1d

./: .gitignore  CITATIONS.bib  MANIFEST.in  README.md  __init__.py  building_mnist1d.ipynb  data.pkl  data.py  mnist1d_data.pkl  pypl_notes.md  pyproject.toml  quickstart.ipynb  train.py  transform.py  utils.py
.github/workflows/: tests.yml
mnist1d/: .gitignore  __init__.py  data.py  transform.py  utils.py
notebooks/: 1. building_mnist1d.ipynb  1. quickstart.ipynb  2. building_mnist1d.ipynb  3. mnist1d_pip.ipynb  4. self-supervised-learning.ipynb  5. lottery_tickets.ipynb  6. deep_double_descent.ipynb  7. metalearn_learn_rate.ipynb  8. metalearn_activation_function.ipynb  9. benchmark_pooling.ipynb  README.md  benchmark-pooling.ipynb  building-mnist1d.ipynb  building_mnist1d.ipynb  deep-double-descent.ipynb  lottery-tickets.ipynb  metalearn-activation-function.ipynb  metalearn-learn-rate.ipynb  mnist1d-classification.ipynb  mnist1d-pip.ipynb  mnist1d_tiny.ipynb  models.py  mpl_style.txt  self-supervised-learning.ipynb  train.py  tsne-mnist-vs-mnist1d.ipynb
static/: human_q2.pkl  human_q3.pkl  human_q4.pkl  human_q5.pkl
tests/: test_data.py  test_transform.py  test_utils.py
