[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist1d"
authors = [
    {name = "Sam Greydanus", email = "greydanus@users.noreply.github.com"},
    {name = "Peter Steinbach", email = "psteinb@users.noreply.github.com"},
    {name = "Karim", email = "karim-53@users.noreply.github.com"}
]
description = "A 1D analogue of the MNIST dataset for measuring spatial biases and answering Science of Deep Learning questions"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["dataset", "mnist", "machine learning", "deep learning", "1D"]
license = {text = "Apache-2.0"}
classifiers = [
    "Framework :: Numpy",
    "Framework :: Scipy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'requests',
    'numpy',
    'matplotlib',
    'scipy'
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]
all = ["torch"]

[tool.setuptools]
packages = ["mnist1d"]

# [project.scripts]
# my-script = "my_package.module:function"