[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist1d"
authors = [
    {name = "Sam Greydanus", email = "greydanus@users.noreply.github.com"},
    {name = "Peter Steinbach", email = "psteinb@users.noreply.github.com"},
    {name = "Karim", email = "karim-53@users.noreply.github.com"},
    {name = "Dmitry Kobak", email= "dmitry.kobak@uni-tuebingen.de"},
    {name = "Jakob Jordan", email= "jakobjordan@posteo.de"}
]
description = "A 1D analogue of the MNIST dataset for measuring spatial biases and answering Science of Deep Learning questions"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["dataset", "mnist", "machine learning", "deep learning", "1D"]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research"
]
dependencies = [
    "requests",
    "numpy",
    "matplotlib",
    "scipy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]
all = ["torch","notebook"]

[tool.setuptools]
packages = ["mnist1d"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

# [tool.setuptools.packages.find]
# where = ["mnist1d"]

# [tool.setuptools.exclude-package-data]
# mnist1d = ["notebooks/*", "static/*", "*pkl"]

[project.urls]
Homepage = "https://github.com/greydanus/mnist1d"

# [project.scripts]
# my-script = "my_package.module:function"
